--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 
 <dl>
     <dt>Sat 03 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/markdown-test.html">Markdown Test</a></dd>
+    <dt>Sat 03 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/second-post.html">Second Post</a></dd>
 </dl>
 </section>
