--- a/authors.html
+++ b/authors.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                     <li><a href="http://blog.billhertzing.com/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,7 +22,7 @@
 <section id="content" class="body">
     <h1>Authors on Bill's Blog</h1>
     <ul>
-        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (2)</li>
     </ul>
 </section>
 
