--- a/categories.html
+++ b/categories.html
@@ -14,10 +14,12 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                     <li><a href="http://blog.billhertzing.com/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
+    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
     <li><a href="http://blog.billhertzing.com/category/review.html">Review</a></li>
 </ul>
         <section id="extras" class="body">
