--- a/archives.html
+++ b/archives.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                     <li><a href="http://blog.billhertzing.com/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -21,6 +22,8 @@
 <h1>Archives for Bill's Blog</h1>
 
 <dl>
+    <dt>Sun 04 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/code-test.html">Code Test</a></dd>
     <dt>Sat 03 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/markdown-test.html">Markdown Test</a></dd>
 </dl>
