--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
                 <nav><ul>
+                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                     <li><a href="http://blog.billhertzing.com/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
