--- a/tags.html
+++ b/tags.html
@@ -28,18 +28,18 @@
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://getpelican.com/">Pelican</a></li>
-                            <li><a href="http://python.org/">Python.org</a></li>
-                            <li><a href="http://jinja.pocoo.org/">Jinja2</a></li>
-                            <li><a href="#">You can modify those links in your config file</a></li>
+                            <li><a href="http://billhertzing.com/">Bill Hertzing</a></li>
+                            <li><a href="http://www.rackspace.com/blog/">Rackspace Blog</a></li>
+                            <li><a href="https://developer.rackspace.com/blog/">Developer Blog</a></li>
+                            <li><a href="http://techblog.netflix.com/">Netflix Tech Blog</a></li>
                         </ul>
                 </div><!-- /.blogroll -->
                 <div class="social">
                         <h2>social</h2>
                         <ul>
 
-                            <li><a href="#">You can add links in your config file</a></li>
-                            <li><a href="#">Another social link</a></li>
+                            <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
+                            <li><a href="https://www.flickr.com/photos/hertzing/">Flickr</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
