--- a/tags.html
+++ b/tags.html
@@ -28,7 +28,7 @@
                 <div class="blogroll">
                         <h2>blogroll</h2>
                         <ul>
-                            <li><a href="http://billhertzing.com/">Bill Hertzing</a></li>
+                            <li><a href="http://billhertzing.com/">BillHertzing.com</a></li>
                             <li><a href="http://www.rackspace.com/blog/">Rackspace Blog</a></li>
                             <li><a href="https://developer.rackspace.com/blog/">Developer Blog</a></li>
                             <li><a href="http://techblog.netflix.com/">Netflix Tech Blog</a></li>
