--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 
 <dl>
     <dt>Sun 04 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/google-car.html">Google Car on a Sunday Drive</a></dd>
+    <dt>Sun 04 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/code-test.html">Code Test</a></dd>
 </dl>
 </section>
