--- a/tags.html
+++ b/tags.html
@@ -21,6 +21,9 @@
 <section id="content" class="body">
     <h1>Tags for Bill's Blog</h1>
     <ul>
+        <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
     </ul>
 </section>
 
