--- a/archives.html
+++ b/archives.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
         <meta charset="utf-8" />
-        <title>Bill's Blog</title>
+        <title>Bill's Conversational Musings</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
 
         <!--[if IE]>
@@ -12,13 +12,13 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
+                <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
                     <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
-<h1>Archives for Bill's Blog</h1>
+<h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
     <dt>Sun 04 January 2015</dt>
