--- a/google-car.html
+++ b/google-car.html
@@ -12,7 +12,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://blog.billhertzing.com/">Bill's Blog </a></h1>
+                <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
                     <li class="active"><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
                 </ul></nav>
