--- a/google-car.html
+++ b/google-car.html
@@ -60,6 +60,8 @@
 <p><strong>Automated Car:</strong> It's obvious the car has collision avoidance.  Many of those features are already advertised on TV for many of the more luxury brands.  Will an automated car know to avoid those drivers as they continue down the road?  Perhaps you could ID the car that is being driven poorly and know to keep clear of it.</p>
 <h2>Conclusion</h2>
 <p>These are just a few of the questions that come to mind when people hail the coming of driver-less vehicles.  I believe they have their place for shuttles and delivery mechanisms.  They can also enable transportation for those who don't have a license to drive or are unable to drive.  However, with all the variables on and around the road, a full self-driving car for the masses is still way off in the future.</p>
+<h2>Have a comment?</h2>
+<p><a href="https://twitter.com/BillHertzing">Send me a tweet on Twitter</a></p>
     </div><!-- /.entry-content -->
 
   </article>
