--- a/archives.html
+++ b/archives.html
@@ -21,6 +21,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Mon 12 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/use-your-data.html">Use Your Data</a></dd>
     <dt>Sun 04 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/google-car.html">Google Car on a Sunday Drive</a></dd>
 </dl>
