--- a/tags.html
+++ b/tags.html
@@ -21,9 +21,13 @@
 <section id="content" class="body">
     <h1>Tags for Bill's Conversational Musings</h1>
     <ul>
+        <li><a href="http://blog.billhertzing.com/tag/.html"></a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
     </ul>
 </section>
 
