Security at Every Layer

--- a/tags.html
+++ b/tags.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Bill's Conversational Musings - Tags</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
+        <link href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,9 +25,12 @@
         <li><a href="http://blog.billhertzing.com/tag/.html"></a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/cloud.html">cloud</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/five-pillars.html">five pillars</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
     </ul>
 </section>
@@ -44,6 +48,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
                         </ul>
