--- a/archives.html
+++ b/archives.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Bill's Conversational Musings</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
+        <link href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,6 +22,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Wed 21 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/security-at-every-layer.html">Security at Every Layer</a></dd>
     <dt>Mon 12 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/use-your-data.html">Use Your Data</a></dd>
     <dt>Sun 04 January 2015</dt>
@@ -40,6 +43,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
                         </ul>
