--- a/authors.html
+++ b/authors.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Bill's Conversational Musings - Authors</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
+        <link href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings Atom Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -21,7 +22,7 @@
 <section id="content" class="body">
     <h1>Authors on Bill's Conversational Musings</h1>
     <ul>
-        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (2)</li>
+        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (3)</li>
     </ul>
 </section>
 
@@ -38,6 +39,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
                         </ul>
