--- a/tags.html
+++ b/tags.html
@@ -27,11 +27,14 @@
         <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/cloud.html">cloud</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/conference.html">conference</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/five-pillars.html">five pillars</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> (1)</li>
     </ul>
 </section>
 
