--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Mon 26 January 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/wordcamp-san-antonio.html">WordCamp 2015 San Antonio</a></dd>
     <dt>Wed 21 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/security-at-every-layer.html">Security at Every Layer</a></dd>
     <dt>Mon 12 January 2015</dt>
