--- a/tags.html
+++ b/tags.html
@@ -5,6 +5,7 @@
         <title>Bill's Conversational Musings - Tags</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
         <link href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings Atom Feed" />
+        <link href="http://blog.billhertzing.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Bill's Conversational Musings RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -52,6 +53,7 @@
                         <h2>social</h2>
                         <ul>
                             <li><a href="http://blog.billhertzing.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="http://blog.billhertzing.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
                         </ul>
