--- a/google-car.html
+++ b/google-car.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Google Car on a Sunday Drive</title>
         <link rel="stylesheet" href="http://blog.billhertzing.com/theme/css/main.css" />
+        <link href="http://blog.billhertzing.com/feeds/rss.xml" type="application/rss+xml" rel="alternate" title="Bill's Conversational Musings RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -77,6 +78,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
+                            <li><a href="http://blog.billhertzing.com/feeds/rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
                         </ul>
