--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Mon 02 February 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/lawn-maintenance.html">Lawn Maintenance</a></dd>
     <dt>Thu 29 January 2015</dt>
     <dd><a href="http://blog.billhertzing.com/wordcamp-hangout.html">WordCamp Hangout</a></dd>
     <dt>Mon 26 January 2015</dt>
