--- a/tags.html
+++ b/tags.html
@@ -23,7 +23,7 @@
     <h1>Tags for Bill's Conversational Musings</h1>
     <ul>
         <li><a href="http://blog.billhertzing.com/tag/.html"></a> (1)</li>
-        <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/cloud.html">cloud</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
@@ -31,10 +31,12 @@
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/five-pillars.html">five pillars</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/lawn.html">lawn</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> (2)</li>
+        <li><a href="http://blog.billhertzing.com/tag/yard-work.html">yard work</a> (1)</li>
     </ul>
 </section>
 
