Three Diciplines & Added LinkedIn

--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Mon 09 February 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/three-website-disciplines-needed-to-build-a-website.html">Three Website Disciplines Needed to Build a Website</a></dd>
     <dt>Mon 02 February 2015</dt>
     <dd><a href="http://blog.billhertzing.com/lawn-maintenance.html">Lawn Maintenance</a></dd>
     <dt>Thu 29 January 2015</dt>
@@ -52,6 +54,7 @@
                             <li><a href="http://blog.billhertzing.com/feeds/rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
+                            <li><a href="http://www.linkedin.com/in/bhertzing">LinkedIn</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
