--- a/tags.html
+++ b/tags.html
@@ -29,12 +29,14 @@
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/conference.html">conference</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/design.html">design</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/five-pillars.html">five pillars</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/lawn.html">lawn</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/website.html">website</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/yard-work.html">yard work</a> (1)</li>
     </ul>
@@ -56,6 +58,7 @@
                             <li><a href="http://blog.billhertzing.com/feeds/rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
+                            <li><a href="http://www.linkedin.com/in/bhertzing">LinkedIn</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
