--- a/authors.html
+++ b/authors.html
@@ -22,7 +22,7 @@
 <section id="content" class="body">
     <h1>Authors on Bill's Conversational Musings</h1>
     <ul>
-        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (6)</li>
+        <li><a href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a> (7)</li>
     </ul>
 </section>
 
@@ -42,6 +42,7 @@
                             <li><a href="http://blog.billhertzing.com/feeds/rss.xml" type="application/rss+xml" rel="alternate">rss feed</a></li>
 
                             <li><a href="https://twitter.com/BillHertzing">Twitter</a></li>
+                            <li><a href="http://www.linkedin.com/in/bhertzing">LinkedIn</a></li>
                         </ul>
                 </div><!-- /.social -->
         </section><!-- /#extras -->
