--- a/archives.html
+++ b/archives.html
@@ -22,6 +22,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Mon 23 February 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/the-art-of-decoupled-technology.html">The Art of Decoupled Technology</a></dd>
     <dt>Mon 09 February 2015</dt>
     <dd><a href="http://blog.billhertzing.com/three-website-disciplines-needed-to-build-a-website.html">Three Website Disciplines Needed to Build a Website</a></dd>
     <dt>Mon 02 February 2015</dt>
