--- a/tags.html
+++ b/tags.html
@@ -29,14 +29,16 @@
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/conference.html">conference</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/database.html">database</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/design.html">design</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/five-pillars.html">five pillars</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/google.html">Google</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/lawn.html">lawn</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/modularity.html">modularity</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
-        <li><a href="http://blog.billhertzing.com/tag/website.html">website</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/website.html">website</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/yard-work.html">yard work</a> (1)</li>
     </ul>
