--- a/the-art-of-decoupled-technology.html
+++ b/the-art-of-decoupled-technology.html
@@ -15,7 +15,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li class="active"><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -35,7 +37,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/website.html">website</a> <a href="http://blog.billhertzing.com/tag/database.html">database</a> <a href="http://blog.billhertzing.com/tag/modularity.html">modularity</a> </p>
 </footer><!-- /.post-info -->      <p><img alt="IMAGE DESCRIPTION" src="http://blogimages.billhertzing.com/decouple-tech.jpg" /></p>
 <p>Although cloud means shared hosting it gives you the power to decouple technology like never before.  To decouple technology means separating elements that have been traditionally connected into independent infrastructure pieces.  Once this done, these elements can be scaled, modified  or replaced altogether giving your systems better performance and reliability.</p>
