--- a/use-your-data.html
+++ b/use-your-data.html
@@ -15,7 +15,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li class="active"><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -35,7 +37,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/data.html">data</a> <a href="http://blog.billhertzing.com/tag/voc.html">voc</a> <a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> <a href="http://blog.billhertzing.com/tag/.html"></a> </p>
 </footer><!-- /.post-info -->      <h2>There's Data Everywhere</h2>
 <p>Most companies don't think of themselves as a data company but they are.  Today sensors can be located in almost anything.  From shoes, televisions, computers, watches, phones, cars, refrigerators and more are all collecting or reporting data.  Then there's user data like what customers buy, how often, related items, and where they live can reveal a lot of information about who they are.  </p>
