--- a/categories.html
+++ b/categories.html
@@ -15,11 +15,15 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <ul>
-    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+    <li><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
 </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
