--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
@@ -30,7 +32,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/website.html">website</a> <a href="http://blog.billhertzing.com/tag/database.html">database</a> <a href="http://blog.billhertzing.com/tag/modularity.html">modularity</a> </p>
 </footer><!-- /.post-info --><p><img alt="IMAGE DESCRIPTION" src="http://blogimages.billhertzing.com/decouple-tech.jpg" /></p>
 <p>Although cloud means shared hosting it gives you the power to decouple technology like never before.  To decouple technology means separating elements that have been traditionally connected into independent infrastructure pieces.  Once this done, these elements can be scaled, modified  or replaced altogether giving your systems better performance and reliability.</p>
@@ -86,9 +88,9 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/website.html">website</a> <a href="http://blog.billhertzing.com/tag/design.html">design</a> </p>
-</footer><!-- /.post-info -->                <p><img alt="IMAGE DESCRIPTION" src="http://blogimages.billhertzing.com/three-diciplines.jpg" /></p>
+</footer><!-- /.post-info -->                <p><img alt="Three diciplines" src="http://blogimages.billhertzing.com/three-diciplines.jpg" /></p>
 <p>As easy as it may seem, creating a good website can be a daunting task.  It's easy to just create a website, but how effective is it?  Who is your audience?  What kind of content will you serve up?  What will it look like?  Answering these questions requires more ...</p>
                 <a class="readmore" href="http://blog.billhertzing.com/three-website-disciplines-needed-to-build-a-website.html">read more</a>
                 </div><!-- /.entry-content -->
@@ -109,9 +111,9 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/living.html">Living</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/lawn.html">lawn</a> <a href="http://blog.billhertzing.com/tag/yard-work.html">yard work</a> <a href="http://blog.billhertzing.com/tag/automation.html">automation</a> </p>
-</footer><!-- /.post-info -->                <p><img alt="IMAGE DESCRIPTION" src="http://blogimages.billhertzing.com/mower01.jpg" /></p>
+</footer><!-- /.post-info -->                <p><img alt="Mower" src="http://blogimages.billhertzing.com/mower01.jpg" /></p>
 <p>Why am I still mowing my lawn?  For the past 30 or so years I have had to push a lawn mower around a yard in some way, shape, or form.  Granted, there were a few years in college where, when I was living in a dorm, I didn't ...</p>
                 <a class="readmore" href="http://blog.billhertzing.com/lawn-maintenance.html">read more</a>
                 </div><!-- /.entry-content -->
@@ -132,7 +134,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> <a href="http://blog.billhertzing.com/tag/conference.html">conference</a> <a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> </p>
 </footer><!-- /.post-info -->                <p><img alt="WordCamp Hangout Pic" src="http://blogimages.billhertzing.com/wordcamp-hangout.jpg" /></p>
 <p>Here's a real quick update/post about a Google Hangout I did about the WordCamp 2015 conference.  We share what we learned, and what we hope to see in upcoming WordCamp events.</p>
@@ -160,9 +162,9 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> <a href="http://blog.billhertzing.com/tag/conference.html">conference</a> <a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> </p>
-</footer><!-- /.post-info -->                <p><img alt="" src="http://blogimages.billhertzing.com/Bill-at-Wordcamp.jpg" /> </p>
+</footer><!-- /.post-info -->                <p><img alt="Bill at Wordcamp" src="http://blogimages.billhertzing.com/Bill-at-Wordcamp.jpg" /> </p>
 <p>This past Saturday I worked the <a href="https://twitter.com/cloudu">CloudU</a> booth at San Antonio's <a href="https://twitter.com/WordCampSATX">WordCamp 2015</a> in San Antonio.  This is a conference for all things Wordpress.  There were developers, marketers and bloggers in attendance.  People were there to learn more about Wordpress and how they could better use the technology.  </p>
 <p>Wordpress ...</p>
                 <a class="readmore" href="http://blog.billhertzing.com/wordcamp-san-antonio.html">read more</a>
