--- a/wordcamp-hangout.html
+++ b/wordcamp-hangout.html
@@ -15,7 +15,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li class="active"><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -35,7 +37,7 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> <a href="http://blog.billhertzing.com/tag/conference.html">conference</a> <a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> </p>
 </footer><!-- /.post-info -->      <p><img alt="WordCamp Hangout Pic" src="http://blogimages.billhertzing.com/wordcamp-hangout.jpg" /></p>
 <p>Here's a real quick update/post about a Google Hangout I did about the WordCamp 2015 conference.  We share what we learned, and what we hope to see in upcoming WordCamp events.</p>
