--- a/wordcamp-san-antonio.html
+++ b/wordcamp-san-antonio.html
@@ -15,7 +15,9 @@
         <header id="banner" class="body">
                 <h1><a href="http://blog.billhertzing.com/">Bill's Conversational Musings </a></h1>
                 <nav><ul>
-                    <li class="active"><a href="http://blog.billhertzing.com/category/home.html">Home</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/living.html">Living</a></li>
+                    <li class="active"><a href="http://blog.billhertzing.com/category/technology.html">Technology</a></li>
+                    <li><a href="http://blog.billhertzing.com/category/tips-advice.html">Tips & Advice</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 <section id="content" class="body">
@@ -35,9 +37,9 @@
         <address class="vcard author">
                 By                         <a class="url fn" href="http://blog.billhertzing.com/author/bill-hertzing.html">Bill Hertzing</a>
         </address>
-<p>In <a href="http://blog.billhertzing.com/category/home.html">Home</a>. </p>
+<p>In <a href="http://blog.billhertzing.com/category/technology.html">Technology</a>. </p>
 <p>tags: <a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> <a href="http://blog.billhertzing.com/tag/conference.html">conference</a> <a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> </p>
-</footer><!-- /.post-info -->      <p><img alt="" src="http://blogimages.billhertzing.com/Bill-at-Wordcamp.jpg" /> </p>
+</footer><!-- /.post-info -->      <p><img alt="Bill at Wordcamp" src="http://blogimages.billhertzing.com/Bill-at-Wordcamp.jpg" /> </p>
 <p>This past Saturday I worked the <a href="https://twitter.com/cloudu">CloudU</a> booth at San Antonio's <a href="https://twitter.com/WordCampSATX">WordCamp 2015</a> in San Antonio.  This is a conference for all things Wordpress.  There were developers, marketers and bloggers in attendance.  People were there to learn more about Wordpress and how they could better use the technology.  </p>
 <p>Wordpress is probably the most popular content management system in use today.  According to the stats from the opening keynote, Wordpress powers "over 60% of the top 10 million websites using an available CMS (23% of the top 10 million websites overall)."  Although these conferences had been held in other cities including Austin, this was San Antonio's first for this user group.  </p>
 <p>In this post I am going write about what I saw at the conference and what I would like to see at future conferences.</p>
@@ -49,7 +51,7 @@
 <p>Attendees were seeking a deeper knowledge on Wordpress usage. First thing to mention is the software.  Many had questions about what's new in Wordpress.  They were sharing stories about plugins, themes and lessons learned.</p>
 <p>Next, caching and page load times was a hot topic.  <a href="https://twitter.com/TheWPressGuy">Anthony Burchell</a> provided more advanced technical knowledge as he shared how to use caching both internally and externally.  From past experiences at similar conferences I have found that topics around faster page load times are always popular.  Anthony is known as the Wordpress guy at Rackspace and a new plug-in he introduced was the <a href="http://wprediscache.com">caching plugin using Redis</a>.</p>
 <p>I was able to peek into the <em>Zero to WordPress</em> talk led by Michele Butcher.  It was a packed room as many were anxious to learn about the basics of Wordpress.  Many that I talked to said they were really looking forward to that talk as they wanted to get in on the ground floor of what running Wordpress was all about.</p>
-<p><img alt="" src="http://blogimages.billhertzing.com/Garrett-Talk2.jpg" /> </p>
+<p><img alt="Garrett Speaks" src="http://blogimages.billhertzing.com/Garrett-Talk2.jpg" /> </p>
 <p><a href="https://twitter.com/pinojo">Garrett Heath</a>'s talk titled <em>Things I’ve Learned from 5+ Years of Blogging</em> was another event that was standing room only. Garrett shared what he has learned about maintaining <a href="http://www.saflavor.com">SA Flavor</a>, his local blog on San Antonio food and culture. He states that, "While WordPress has made it easier than ever for people to get their thoughts out there, aspiring bloggers often start with a lot of gusto and quickly abandon their blogs."  He stressed the importance of writing on a regular basis and the telling stories.  When you do that the audience will continue to come back for more.  Another key take away was that your blog is your resume.  That means when people look at you (or your resume) they will also look up what you have written or contributed.</p>
 <p>Finally, for the talks I wasn't able to attend, I was able to catch a few tweets.  I saw where the Wordpress troubleshooting talk had some good advice.  Basically, if you are having trouble with your site, it might be best to deactivate all the plug-ins and toggle them one at a time.  This helps isolate the issue.  You can then see if it is something you need and if so, find a replacement plugin.  I know from experience that this is a common issue when Wordpress gets updated and the plugins do not.  Another consideration might be re-installing Wordpress altogether.  However, before you do make sure you have a backup of your site (all Wordpress content) and your database.  These are the two vital pieces to restoring a Wordpress configuration.</p>
 <h2>What I Would Like to See</h2>
