--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Fri 06 March 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/sanctuary-in-a-digital-world.html">Sanctuary in a Digital World</a></dd>
     <dt>Mon 23 February 2015</dt>
     <dd><a href="http://blog.billhertzing.com/the-art-of-decoupled-technology.html">The Art of Decoupled Technology</a></dd>
     <dt>Mon 09 February 2015</dt>
