Shopping with a Woman

--- a/tags.html
+++ b/tags.html
@@ -42,8 +42,10 @@
         <li><a href="http://blog.billhertzing.com/tag/reflection.html">reflection</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/shopping.html">shopping</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/website.html">website</a> (2)</li>
+        <li><a href="http://blog.billhertzing.com/tag/women.html">women</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/wordpress.html">wordpress</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/yard-work.html">yard work</a> (1)</li>
     </ul>
