Three Favorite Strengths

--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Tue 31 March 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/my-three-favorite-strengths.html">My Three Favorite Strengths</a></dd>
     <dt>Fri 20 March 2015</dt>
     <dd><a href="http://blog.billhertzing.com/how-to-clothes-shop-with-a-woman.html">How to Clothes Shop with a Woman</a></dd>
     <dt>Fri 06 March 2015</dt>
