--- a/tags.html
+++ b/tags.html
@@ -43,6 +43,8 @@
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/shopping.html">shopping</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/strengths.html">strengths</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/talent.html">talent</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/website.html">website</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/women.html">women</a> (1)</li>
