--- a/archives.html
+++ b/archives.html
@@ -24,6 +24,8 @@
 <h1>Archives for Bill's Conversational Musings</h1>
 
 <dl>
+    <dt>Thu 09 April 2015</dt>
+    <dd><a href="http://blog.billhertzing.com/internet-storage.html">Internet Storage</a></dd>
     <dt>Tue 31 March 2015</dt>
     <dd><a href="http://blog.billhertzing.com/my-three-favorite-strengths.html">My Three Favorite Strengths</a></dd>
     <dt>Fri 20 March 2015</dt>
