--- a/tags.html
+++ b/tags.html
@@ -27,7 +27,7 @@
         <li><a href="http://blog.billhertzing.com/tag/.html"></a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/automation.html">automation</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/car.html">car</a> (1)</li>
-        <li><a href="http://blog.billhertzing.com/tag/cloud.html">cloud</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/cloud.html">cloud</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/coffee.html">coffee</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/conference.html">conference</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/data.html">data</a> (1)</li>
@@ -43,6 +43,7 @@
         <li><a href="http://blog.billhertzing.com/tag/san-antonio.html">san antonio</a> (2)</li>
         <li><a href="http://blog.billhertzing.com/tag/security.html">security</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/shopping.html">shopping</a> (1)</li>
+        <li><a href="http://blog.billhertzing.com/tag/storage.html">storage</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/strengths.html">strengths</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/talent.html">talent</a> (1)</li>
         <li><a href="http://blog.billhertzing.com/tag/voc.html">voc</a> (1)</li>
