--- a/index3.html
+++ b/index3.html
@@ -47,7 +47,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="./theme/img/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="./theme/img/apple-touch-icon-114x114.png">
 
-    <link href="./" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings ATOM Feed" />
+    <link href="feeds/rss.xml" type="application/atom+xml" rel="alternate" title="Bill's Conversational Musings ATOM Feed" />
   </head>
   <body>
     <div class="navbar navbar-fixed-top">
@@ -242,74 +242,14 @@
 </li>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-    <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
-        </a>
-    </li>
     <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
     <li class="tag-1">
@@ -318,8 +258,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
     <li class="tag-1">
@@ -328,13 +268,23 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
     <li class="tag-4">
@@ -343,8 +293,23 @@
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/modularity.html">
             <i class="icon-tag icon-large"></i>modularity
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
         </a>
     </li>
     <li class="tag-4">
@@ -352,19 +317,34 @@
             <i class="icon-tag icon-large"></i>lawn
         </a>
     </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
     <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
         </a>
     </li>
     <li class="tag-4">
@@ -375,6 +355,26 @@
     <li class="tag-1">
         <a href="./tag/san-antonio.html">
             <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
         </a>
     </li>
 
