--- a/index2.html
+++ b/index2.html
@@ -222,7 +222,7 @@
     <li><div><i class="icon-external-link"></i><a href="https://developer.rackspace.com/blog/">Developer Blog</a></div></li>
     <li><div><i class="icon-external-link"></i><a href="http://techblog.netflix.com/">Netflix Tech Blog</a></div></li>
 <li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
-<li><a href="./" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
+<li><a feeds/rss.xml" rel="alternate"><i class="icon-bookmark icon-large"></i>atom feed</a></li>
     <li><a href="https://twitter.com/BillHertzing"><i class="icon-Twitter-sign icon-large"></i>Twitter</a></li>
     <li><a href="http://www.linkedin.com/in/bhertzing"><i class="icon-LinkedIn-sign icon-large"></i>LinkedIn</a></li>
 
@@ -244,19 +244,9 @@
 </li>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
     <li class="tag-4">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
         </a>
     </li>
     <li class="tag-4">
@@ -264,19 +254,14 @@
             <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
+    <li class="tag-4">
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
         </a>
     </li>
     <li class="tag-4">
@@ -285,38 +270,18 @@
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/coffee.html">
             <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
         </a>
     </li>
     <li class="tag-4">
@@ -330,28 +295,43 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/storage.html">
             <i class="icon-tag icon-large"></i>storage
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/car.html">
             <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
         </a>
     </li>
     <li class="tag-1">
@@ -360,8 +340,23 @@
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/learning.html">
             <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
         </a>
     </li>
     <li class="tag-4">
@@ -369,14 +364,19 @@
             <i class="icon-tag icon-large"></i>
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
-        </a>
-    </li>
     <li class="tag-1">
         <a href="./tag/website.html">
             <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
         </a>
     </li>
 
