Texas Music Playlist

--- a/the-art-of-decoupled-technology.html
+++ b/the-art-of-decoupled-technology.html
@@ -190,24 +190,9 @@
 </li>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
     <li class="tag-4">
@@ -215,14 +200,14 @@
             <i class="icon-tag icon-large"></i>cleaning
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
+    <li class="tag-4">
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
+        <a href="./tag/playlist.html">
+            <i class="icon-tag icon-large"></i>playlist
         </a>
     </li>
     <li class="tag-4">
@@ -235,9 +220,64 @@
             <i class="icon-tag icon-large"></i>database
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
+        </a>
+    </li>
     <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
         </a>
     </li>
     <li class="tag-4">
@@ -245,14 +285,19 @@
             <i class="icon-tag icon-large"></i>strengths
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
         </a>
     </li>
     <li class="tag-4">
@@ -266,53 +311,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
         </a>
     </li>
     <li class="tag-4">
@@ -321,13 +321,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/housekeeping.html">
-            <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
         </a>
     </li>
     <li class="tag-4">
@@ -336,8 +331,43 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/texas.html">
+            <i class="icon-tag icon-large"></i>texas
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
         </a>
     </li>
     <li class="tag-4">
@@ -346,28 +376,13 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/google.html">
             <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
 
