--- a/tags.html
+++ b/tags.html
@@ -93,24 +93,9 @@
         <div class="span8" id="content">
 <ul>
 <li class="nav-header"><h4><i class="icon-tags icon-large"></i>Tags</h4></li>
-<li class="tag-4">
-	<a href="./tag/protection.html">
-		<i class="icon-tag icon-large"></i>protection
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/data.html">
-		<i class="icon-tag icon-large"></i>data
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/lawn.html">
-		<i class="icon-tag icon-large"></i>lawn
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/five-pillars.html">
-		<i class="icon-tag icon-large"></i>five pillars
+<li class="tag-1">
+	<a href="./tag/conference.html">
+		<i class="icon-tag icon-large"></i>conference
 	</a>
 </li>
 <li class="tag-4">
@@ -118,14 +103,14 @@
 		<i class="icon-tag icon-large"></i>cleaning
 	</a>
 </li>
-<li class="tag-1">
-	<a href="./tag/cloud.html">
-		<i class="icon-tag icon-large"></i>cloud
+<li class="tag-4">
+	<a href="./tag/housekeeping.html">
+		<i class="icon-tag icon-large"></i>housekeeping
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/.html">
-		<i class="icon-tag icon-large"></i>
+	<a href="./tag/playlist.html">
+		<i class="icon-tag icon-large"></i>playlist
 	</a>
 </li>
 <li class="tag-4">
@@ -138,9 +123,64 @@
 		<i class="icon-tag icon-large"></i>database
 	</a>
 </li>
+<li class="tag-1">
+	<a href="./tag/website.html">
+		<i class="icon-tag icon-large"></i>website
+	</a>
+</li>
+<li class="tag-1">
+	<a href="./tag/automation.html">
+		<i class="icon-tag icon-large"></i>automation
+	</a>
+</li>
 <li class="tag-4">
-	<a href="./tag/coffee.html">
-		<i class="icon-tag icon-large"></i>coffee
+	<a href="./tag/light.html">
+		<i class="icon-tag icon-large"></i>light
+	</a>
+</li>
+<li class="tag-1">
+	<a href="./tag/cloud.html">
+		<i class="icon-tag icon-large"></i>cloud
+	</a>
+</li>
+<li class="tag-1">
+	<a href="./tag/san-antonio.html">
+		<i class="icon-tag icon-large"></i>san antonio
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/security.html">
+		<i class="icon-tag icon-large"></i>security
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/car.html">
+		<i class="icon-tag icon-large"></i>car
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/lawn.html">
+		<i class="icon-tag icon-large"></i>lawn
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/reflection.html">
+		<i class="icon-tag icon-large"></i>reflection
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/design.html">
+		<i class="icon-tag icon-large"></i>design
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/protection.html">
+		<i class="icon-tag icon-large"></i>protection
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/five-pillars.html">
+		<i class="icon-tag icon-large"></i>five pillars
 	</a>
 </li>
 <li class="tag-4">
@@ -148,14 +188,19 @@
 		<i class="icon-tag icon-large"></i>strengths
 	</a>
 </li>
-<li class="tag-1">
-	<a href="./tag/wordpress.html">
-		<i class="icon-tag icon-large"></i>wordpress
+<li class="tag-4">
+	<a href="./tag/storage.html">
+		<i class="icon-tag icon-large"></i>storage
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/women.html">
-		<i class="icon-tag icon-large"></i>women
+	<a href="./tag/music.html">
+		<i class="icon-tag icon-large"></i>music
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/launch.html">
+		<i class="icon-tag icon-large"></i>launch
 	</a>
 </li>
 <li class="tag-4">
@@ -169,53 +214,8 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/design.html">
-		<i class="icon-tag icon-large"></i>design
-	</a>
-</li>
-<li class="tag-1">
-	<a href="./tag/san-antonio.html">
-		<i class="icon-tag icon-large"></i>san antonio
-	</a>
-</li>
-<li class="tag-1">
-	<a href="./tag/hangout.html">
-		<i class="icon-tag icon-large"></i>hangout
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/talent.html">
-		<i class="icon-tag icon-large"></i>talent
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/reflection.html">
-		<i class="icon-tag icon-large"></i>reflection
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/car.html">
-		<i class="icon-tag icon-large"></i>car
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/shopping.html">
-		<i class="icon-tag icon-large"></i>shopping
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/light.html">
-		<i class="icon-tag icon-large"></i>light
-	</a>
-</li>
-<li class="tag-1">
-	<a href="./tag/conference.html">
-		<i class="icon-tag icon-large"></i>conference
-	</a>
-</li>
-<li class="tag-1">
-	<a href="./tag/automation.html">
-		<i class="icon-tag icon-large"></i>automation
+	<a href="./tag/voc.html">
+		<i class="icon-tag icon-large"></i>voc
 	</a>
 </li>
 <li class="tag-4">
@@ -224,13 +224,8 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/housekeeping.html">
-		<i class="icon-tag icon-large"></i>housekeeping
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/security.html">
-		<i class="icon-tag icon-large"></i>security
+	<a href="./tag/game.html">
+		<i class="icon-tag icon-large"></i>game
 	</a>
 </li>
 <li class="tag-4">
@@ -239,8 +234,43 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/voc.html">
-		<i class="icon-tag icon-large"></i>voc
+	<a href="./tag/.html">
+		<i class="icon-tag icon-large"></i>
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/texas.html">
+		<i class="icon-tag icon-large"></i>texas
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/shopping.html">
+		<i class="icon-tag icon-large"></i>shopping
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/coffee.html">
+		<i class="icon-tag icon-large"></i>coffee
+	</a>
+</li>
+<li class="tag-1">
+	<a href="./tag/wordpress.html">
+		<i class="icon-tag icon-large"></i>wordpress
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/women.html">
+		<i class="icon-tag icon-large"></i>women
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/data.html">
+		<i class="icon-tag icon-large"></i>data
+	</a>
+</li>
+<li class="tag-4">
+	<a href="./tag/talent.html">
+		<i class="icon-tag icon-large"></i>talent
 	</a>
 </li>
 <li class="tag-4">
@@ -249,28 +279,13 @@
 	</a>
 </li>
 <li class="tag-4">
-	<a href="./tag/storage.html">
-		<i class="icon-tag icon-large"></i>storage
-	</a>
-</li>
-<li class="tag-4">
-	<a href="./tag/launch.html">
-		<i class="icon-tag icon-large"></i>launch
-	</a>
-</li>
-<li class="tag-1">
-	<a href="./tag/website.html">
-		<i class="icon-tag icon-large"></i>website
-	</a>
-</li>
-<li class="tag-4">
 	<a href="./tag/google.html">
 		<i class="icon-tag icon-large"></i>Google
 	</a>
 </li>
-<li class="tag-4">
-	<a href="./tag/game.html">
-		<i class="icon-tag icon-large"></i>game
+<li class="tag-1">
+	<a href="./tag/hangout.html">
+		<i class="icon-tag icon-large"></i>hangout
 	</a>
 </li>
 </ul>
@@ -305,24 +320,9 @@
 </li>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
         </a>
     </li>
     <li class="tag-4">
@@ -330,14 +330,14 @@
             <i class="icon-tag icon-large"></i>cleaning
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
+    <li class="tag-4">
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
+        <a href="./tag/playlist.html">
+            <i class="icon-tag icon-large"></i>playlist
         </a>
     </li>
     <li class="tag-4">
@@ -350,9 +350,64 @@
             <i class="icon-tag icon-large"></i>database
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/website.html">
+            <i class="icon-tag icon-large"></i>website
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
+        </a>
+    </li>
     <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
         </a>
     </li>
     <li class="tag-4">
@@ -360,14 +415,19 @@
             <i class="icon-tag icon-large"></i>strengths
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
         </a>
     </li>
     <li class="tag-4">
@@ -381,53 +441,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
         </a>
     </li>
     <li class="tag-4">
@@ -436,13 +451,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/housekeeping.html">
-            <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
         </a>
     </li>
     <li class="tag-4">
@@ -451,8 +461,43 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/texas.html">
+            <i class="icon-tag icon-large"></i>texas
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
         </a>
     </li>
     <li class="tag-4">
@@ -461,28 +506,13 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/website.html">
-            <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-4">
         <a href="./tag/google.html">
             <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
 
