--- a/resume/index.html
+++ b/resume/index.html
@@ -715,6 +715,9 @@ Connecting people’s enthusiasm with technology.
 <dt>University of North Texas</dt>
 <dd><em>Music Composition</em>
 <strong>1993 - 1998</strong></dd>
+<dt>Houston Community College</dt>
+<dd><em>Music Music Theory</em>
+<strong>1990 - 1993</strong></dd>
 </dl>
 
 <hr />
