--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -725,8 +725,6 @@ Connecting people’s enthusiasm with technology.
 <dt>ITIL® Foundation Certificate in IT Service Management</dt>
 <dd><em>CSME, Inc.</em>
 <strong>November 2012</strong></dd>
-
-<dt>CloudU</dt>
 </dl>
 
 <hr />
@@ -734,11 +732,7 @@ Connecting people’s enthusiasm with technology.
 <h3 id="strengths">Gallup Strengths</h3>
 
 <ol>
-<li>Futuristic</li>
-<li>Context</li>
-<li>Relator</li>
-<li>Strategic</li>
-<li>Intellection</li>
+<li>Futuristic | Context | Relator | Strategic | Intellection</li>
 </ol>
 
 <hr />
@@ -758,12 +752,6 @@ Connecting people’s enthusiasm with technology.
 <dt>SBTI, San Marcos, TX</dt>
 <dd><em>Technology Manager</em>
 <strong>2002 – 2011</strong>
-<dt>SkillMaster, Inc., Houston, TX</dt>
-<dd><em>Director of Technology</em>
-<strong>2000 – 2002</strong>
-<dt>Sterling Bank, Houston, TX</dt>
-<dd><em>Network Specialist</em>
-<strong>1999 – 2000</strong>
 </dd>
 
 
