--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -729,11 +729,10 @@ Connecting people’s enthusiasm with technology.
 
 <hr />
 
-<h3 id="strengths">Gallup Strengths</h3>
+<h3 id="strengths">Strengths</h3>
 
-<ol>
 <li>Futuristic | Context | Relator | Strategic | Intellection</li>
-</ol>
+
 
 <hr />
 
