--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -731,7 +731,7 @@ Connecting people’s enthusiasm with technology.
 
 <h3 id="strengths">Strengths</h3>
 
-<li>Futuristic | Context | Relator | Strategic | Intellection</li>
+Futuristic | Context | Relator | Strategic | Intellection
 
 
 <hr />
