--- a/resume/pdf.html
+++ b/resume/pdf.html
@@ -698,23 +698,14 @@ Connecting people’s enthusiasm with technology.
 
 <h3 id="technical">Technical</h3>
 
-<ol>
-<li>Cloud Servers</li>
-<li>Desktop Support</li>
-<li>Web design</li>
-<li>Markdown</li>
-<li>Server Administration</li>
-<li>Customer Support</li>
-</ol>
+Cloud Servers | Desktop Support | Server Administration | Customer Support
 
 <hr />
 
 <h3 id="education">Education</h3>
 
 <dl>
-<dt>University of North Texas</dt>
-<dd><em>Music Composition</em>
-<strong>1993 - 1998</strong></dd>
+<dt>University of North Texas</dt><em>Music Composition</em><strong>1993 - 1998</strong>
 </dl>
 
 <hr />
